[package]
name = "spacerust"
version = "0.1.0"
authors = ["Vaclav Krajicek <vaclav.krajicek@eyen.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.sdl2]
version = "0.31.0"
features = ["bundled", "static-link"]